tests/NormalTests/paczka1/small_fuzzy/20638708.err
Error in line 2: bjDIpb A329 82,0
Error in line 4: T3M039V4hBI A120 76,0
